--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,23 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: flex-start;
 	font-family: Raleway;
+	height: 80vh;
 }
 .content {
-	flex: 5;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	width: 90vw;
+	height: 40vh;
+	margin-top: 10%;
+}
+
+@media screen and (min-width: 600px) {
+	.content {
+		width: 30vw;
+		height: 45vh;
+		margin-top: 10%;
+	}
 }
