--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,9 +1,8 @@
 .login-container {
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	border: 1px solid #555;
-	width: 25vw;
-	height: 40vh;
 	justify-content: space-around;
 	align-items: center;
 }
