--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -2,9 +2,11 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-	border: 1px solid #555;
 	justify-content: space-around;
 	align-items: center;
+	background-color: #fff;
+	border: 1px solid #aaa;
+	box-shadow: 4px 4px #aaa;
 }
 .login-title {
 	font-weight: bold;
