--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,3 +1,11 @@
+.login-box {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 90vw;
+	height: 50vh;
+	margin-top: 10%;
+}
 .login-container {
 	flex: 1;
 	display: flex;
@@ -17,24 +25,33 @@
 	display: flex;
 	flex-direction: column;
 	background-color: #fff;
-	justify-content: space-around;
+	justify-content: center;
 }
 .login-submit {
-	flex: 2;
+	flex: 1;
 	background-color: #fb0;
 	color: #422;
 	padding: 0% 2%;
 	width: 80%;
-	max-height: 15%;
+	max-height: 5vh;
 	font-weight: bold;
 }
 .login-form-field {
 	padding: 2%;
-	width: 70%;
+	width: 80%;
 }
 .login-options {
 	display: flex;
 	width: 100%;
+	margin-top: 10%;
 	justify-content: space-around;
 	font-size: 0.8em;
+}
+
+@media screen and (min-width: 600px) {
+	.login-box {
+		width: 60vw;
+		height: 50vh;
+		margin-top: 10%;
+	}
 }
