--- a/src/CustomInput/CustomInput.css
+++ b/src/CustomInput/CustomInput.css
@@ -7,7 +7,16 @@
 	font-size: 0.9em;
 	flex: 1;
 	padding-right: 1%;
+	color: #555;
 }
 .input-field {
 	flex: 3;
+	border: none;
+	border-bottom: 2px solid #aaa;
+}
+.input-field:focus {
+	flex: 3;
+	border: none;
+	outline: none;
+	border-bottom: 2px solid #fb0;
 }
