--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,57 +1,92 @@
 .login-box {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	justify-content: center;
-	width: 90vw;
-	height: 50vh;
+	/*flex-direction: initial;*/
 	margin-top: 10%;
+	width: 100vw;
+	/*min-width: 75vw;*/
+	max-width: 100vw;
 }
 .login-container {
-	flex: 1;
 	display: flex;
+	padding: 20px;
+	flex: 1;
+	min-width: 50%;
 	flex-direction: column;
-	justify-content: space-around;
+	/*justify-content: space-around;*/
 	align-items: center;
-	background-color: #fff;
+	background-color: #f2f2f2;
 	border: 1px solid #aaa;
-	box-shadow: 4px 4px #aaa;
+	border-radius: 5px;
+	box-shadow: 5px 5px 8px #aaa;
 }
 .login-title {
 	font-weight: bold;
 	flex: 1;
 }
 .login-form {
-	flex: 3;
-	display: flex;
-	flex-direction: column;
-	background-color: #fff;
-	justify-content: center;
+	/*padding: 20px;*/
+	/*flex: 3;*/
+	background-color: transparent;
 }
 .login-submit {
-	flex: 1;
-	background-color: #fb0;
-	color: #422;
-	padding: 0% 2%;
-	width: 80%;
+	width: 100%;
+	/*margin: 0px 20px 0px 20px;*/
+	/*min-width: 1vw;*/
+	/*max-width: 80vw;*/
 	max-height: 5vh;
 	font-weight: bold;
+	min-height: 6vh;
+	flex: 1;
+	background-color: #fb0;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #422;
+	padding: 14px 20px;
+	margin: 8px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
 }
+.login-submit:hover {
+	background-color: #e0a400;
+}
+
 .login-form-field {
 	padding: 2%;
 	width: 80%;
+	background-color: transparent;
 }
 .login-options {
 	display: flex;
 	width: 100%;
-	margin-top: 10%;
+	/*margin-top: 10%;*/
 	justify-content: space-around;
 	font-size: 0.8em;
 }
 
+/*@media screen and (max-width: 400px) {
+	.login-box {
+		width: 100vw;
+		height: 100vh;
+		margin-top: 10%;
+	}
+}*/
 @media screen and (min-width: 600px) {
 	.login-box {
-		width: 60vw;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100vw;
 		height: 50vh;
+		max-width: 100vw;
+		/*min-width: 20vw;
+		max-width: 30vw;*/
+
 		margin-top: 10%;
 	}
 }
