--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,60 +1,77 @@
 .login-box {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	/*flex-direction: initial;*/
-	margin-top: 10%;
 	width: 100vw;
-	/*min-width: 75vw;*/
+	height: 50vh;
+	margin-top: 10%;
+	align-items: center;
 	max-width: 100vw;
+	/*min-width: 75vw;*/
 }
 .login-container {
 	display: flex;
-	padding: 20px;
 	flex: 1;
-	min-width: 25%;
+	min-width: 80%;
 	flex-direction: column;
 	/*justify-content: space-around;*/
 	align-items: center;
-	background-color: #f2f2f2;
+	background-color: #fff;
 	border: 1px solid #aaa;
 	border-radius: 5px;
 	box-shadow: 5px 5px 8px #aaa;
+	align-items: stretch;
 }
 .login-title {
 	font-weight: bold;
 	flex: 1;
+	width: 100%;
+	text-align: center;
+	background-color: #f2f2f2;
 }
 .login-form {
-	/*padding: 20px;*/
-	/*flex: 3;*/
-	background-color: transparent;
+	flex: 4;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	background-color: #fff;
+	justify-content: center;
+	align-items: stretch;
 }
-.login-submit {
-	width: 100%;
+.submit {
+	width: 80%;
+	align-self: center;
+	height: 4vh;
+	max-height: 4vh;
 	/*margin: 0px 20px 0px 20px;*/
 	/*min-width: 1vw;*/
 	/*max-width: 80vw;*/
-	max-height: 5vh;
 	font-weight: bold;
-	min-height: 6vh;
 	flex: 1;
-	background-color: #fb0;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	color: #422;
 	padding: 14px 20px;
 	margin: 8px;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
 }
+.login-submit {
+	background-color: #fb0;
+	color: #422;
+}
+.google-signin {
+	background-color: #fff;
+	color: #555;
+	border: 1px solid #555;
+}
 .login-submit:hover {
 	background-color: #e0a400;
 }
-
+.google-signin:hover {
+	background-color: #e3e3e3;
+}
 .login-form-field {
 	padding: 2%;
 	width: 80%;
@@ -62,7 +79,11 @@
 }
 .login-options {
 	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
+	line-height: 0px;
 	/*margin-top: 10%;*/
 	justify-content: space-around;
 	font-size: 0.8em;
@@ -77,16 +98,22 @@
 }*/
 @media screen and (min-width: 600px) {
 	.login-box {
-		display: flex;
+		/* display: flex;
 		flex-direction: column;
 		justify-content: center;
-		align-items: center;
+		align-items: center; */
 		width: 100vw;
-		height: 50vh;
+		height: 70vh;
 		max-width: 100vw;
 		/*min-width: 20vw;
 		max-width: 30vw;*/
 
 		margin-top: 10%;
+	}
+	.login-container {
+		min-width: 30%;
+	}
+	.login-title {
+		font-size: 1.2em;
 	}
 }
