--- a/src/Register/Register.css
+++ b/src/Register/Register.css
@@ -9,44 +9,52 @@
 	max-width: 100vw;
 }
 .register-container {
-	flex: 1;
 	display: flex;
+	flex: 1;
+	min-width: 80%;
 	flex-direction: column;
 	/*justify-content: space-around;*/
 	align-items: center;
-	background-color: #f2f2f2;
+	background-color: #fff;
 	border: 1px solid #aaa;
 	border-radius: 5px;
 	box-shadow: 5px 5px 8px #aaa;
+	align-items: stretch;
 }
 .register-title {
 	font-weight: bold;
 	flex: 1;
+	width: 100%;
+	text-align: center;
+	background-color: #f2f2f2;
 }
 .register-form {
+	flex: 4;
 	padding: 20px;
-	flex: 3;
 	display: flex;
 	flex-direction: column;
 	background-color: #fff;
 	justify-content: center;
 }
 .register-submit {
-	width: 100%;
-	max-height: 5vh;
-	font-weight: bold;
-	min-height: 6vh;
-	flex: 1;
-	background-color: #fb0;
-	flex-direction: row;
-	justify-content: space-around;
+	width: 80%;
 	align-self: center;
-	color: #422;
+	max-height: 4vh;
+	/*margin: 0px 20px 0px 20px;*/
+	/*min-width: 1vw;*/
+	/*max-width: 80vw;*/
+	font-weight: bold;
+	flex: 1;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	padding: 14px 20px;
-	margin: 8px 0;
+	margin: 8px;
 	border: none;
 	border-radius: 5px;
-	/*cursor: pointer;*/
+	cursor: pointer;
+	background-color: #fb0;
+	color: #422;
 }
 .register-submit:hover {
 	background-color: #e0a400;
@@ -66,8 +74,14 @@
 
 @media screen and (min-width: 600px) {
 	.Register-box {
-		width: 60vw;
-		height: 50vh;
+		width: 100vw;
+		height: 70vh;
 		margin-top: 10%;
+	}
+	.register-title {
+		font-size: 1.2em;
+	}
+	.register-container {
+		min-width: 30%;
 	}
 }
